# openfpm_devices

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  Jenkinsfile_mpi  Memleak_check.hpp  build.sh  build_device.sh  configure.ac  cuda_macro.h  install_BOOST.sh  main.cpp  ptr_info.hpp
cmake_modules/: FindBoost.cmake
src/: CMakeLists.txt  Makefile.am  Memleak_check.cpp  Memleak_check.hpp  cuda_macro.h  main.cpp  ptr_info.hpp
src/config/: config_cmake.h.in
src/instructions/memory/: CudaMemory.cu  CudaThrustMemory.cuh
src/memory/: BHeapMemory.hpp  CudaMemory.cu  CudaMemory.cuh  ExtPreAlloc.hpp  HeapMemory.cpp  HeapMemory.hpp  HeapMemory_unit_tests.hpp  HeapMempory.hpp  Memory_unit_tests.hpp  PreAllocHeapMemory.hpp  PtrMemory.cpp  PtrMemory.hpp  SemManager.cpp  SemManager.hpp  ShmAllocator.cpp  ShmAllocator_manager.cpp  ShmAllocator_manager.hpp  ShmBuffer.cpp  ShmBuffer.hpp  mem_conf.cpp  mem_conf.hpp  memory.hpp
src/util/: cuda_kernel_error_checker.hpp  cuda_launch.hpp  cuda_util.hpp  cudify.hpp  cudify_hardware.hpp  cudify_unit_test.cpp  cudify_vars.cpp  gpu_context.hpp  gpu_types.hpp  ofp_context.hpp  print_stack.hpp  se_util.hpp  util_unit_tests.hpp
src/util/cudify/: cudify.hpp  cudify_alpaka.hpp  cudify_cuda.hpp  cudify_hardware.hpp  cudify_hardware_common.hpp  cudify_hardware_cpu.hpp  cudify_hip.hpp  cudify_openmp.hpp  cudify_openmp_unit_test.cu  cudify_sequencial.hpp  cudify_unit_test.cpp  cudify_unit_test.cu  cudify_vars.cpp
src/util/cudify/alpaka/: cudify_alpaka.hpp  cudify_hardware_alpaka.hpp
src/util/cudify/cuda/: cudify_cuda.hpp  operators.hpp
src/util/cudify/hip/: cudify_hip.hpp
src/util/cudify/openmp/: cudify_openmp.hpp
src/util/cudify/sequential/: cudify_sequencial.hpp  cudify_sequential.hpp
